# diplom_struct

./: .gitignore
search_engine/: CMakeLists.txt  README.md
search_engine/Google_tests/: CMakeLists.txt  gtest.cpp  index_tests.cpp  server_tests.cpp
search_engine/config/: answers.json  requests.json
search_engine/include/: converter.h  inverted_index.h  server.h
search_engine/resources/: file007.txt
search_engine/src/: CMakeLists.txt  converter.cpp  inverted_index.cpp  main.cpp  server.cpp
